Improved QuantileConfidence doc

--- a/python/src/QuantileConfidence_doc.i.in
+++ b/python/src/QuantileConfidence_doc.i.in
@@ -20,20 +20,24 @@ This class estimates bounds of the quantile of level :math:`\alpha \in [0,1]` of
 with a confidence greater than :math:`\beta` using a given order statistics.
 
 Let :math:`x_{\alpha}` be the unknown quantile of level :math:`\alpha` of the random variable :math:`X` of dimension 1.
-Let :math:`(X_1, \dots, X_\sampleSize)` be a sample of independent and identically distributed variables according to :math:`X`.
+Let :math:`(X_0, \dots, X_{\sampleSize-1})` be a sample of independent and identically distributed variables according to :math:`X`.
 
 The bounds of the interval are computed from order statistics that we now introduce.
-Let :math:`X_{(k)}` be the :math:`k` -th order statistics of :math:`(X_1, \dots, X_\sampleSize)` which means that
-:math:`X_{(k)}` is the :math:`k` -th maximum of :math:`(X_1, \dots, X_\sampleSize)` for :math:`1 \leq k \leq \sampleSize`.
+Let :math:`X_{(k)}` be the :math:`k+1` -th order statistics of :math:`(X_0, \dots, X_{\sampleSize-1})` for :math:`0 \leq k \leq \sampleSize -1`.
 
-For example, :math:`X_{(1)} = \min (X_1, \dots, X_\sampleSize)` is the minimum
-and :math:`X_{(\sampleSize)} = \max (X_1, \dots, X_\sampleSize)` is the maximum.
+For example, :math:`X_{(0)} = \min (X_0, \dots, X_{\sampleSize-1})`
+and :math:`X_{(\sampleSize -1)} = \max (X_0, \dots, X_{\sampleSize-1})`.
 
 We have:
 
 .. math::
 
-    X_{(1)} \leq X_{(2)} \leq \dots \leq X_{(\sampleSize)}
+    X_{(0)} \leq X_{(1)} \leq \dots \leq X_{(\sampleSize -1)}
+
+Care: Python enumeration begins at 0 so that the mathematical :math:`X_{(k)}` order statistics of the theoretical file
+:ref:`quantile_confidence_estimation` where :math:`1 \leq k \leq n` corresponds to the order statistics :math:`X_{(k-1)}` given by the library
+with this class `QuantileConfidence`.
+
 
 Examples
 --------
@@ -60,21 +64,6 @@ The lower tail rank :math:`k_{low}` is the largest integer :math:`k` such that:
 In other words, the interval :math:`\left[ X_{(k_{low})}, +\infty\right[` is a unilateral confidence
 interval for the quantile :math:`x_\alpha` with confidence :math:`\beta`.
 
-It is given by:
-
-.. math::
-
-    k_{low} = \overline{F}^{-1}_{n, \alpha}(\beta)
-
-where :math:`\overline{F}^{-1}_{n, \alpha}` is the complementary quantile function 
-of the binomial distribution with parameters :math:`n` and :math:`\alpha`.
-
-The problem has a solution only if:
-
-.. math::
-
-    1 - (1 - \alpha)^n \geq \beta.
-
 The upper tail rank :math:`k_{up}` is the smallest integer :math:`k` such that:
 
 .. math::
@@ -83,19 +72,9 @@ The upper tail rank :math:`k_{up}` is the smallest integer :math:`k` such that:
 
 In other words, the interval :math:`\left]-\infty, X_{(k_{up})}\right]` is a unilateral confidence
 interval for the quantile :math:`x_\alpha` with confidence :math:`\beta`.
-The solution is:
 
-.. math::
-
-    k_{up} = F^{-1}_{n, \alpha}(\beta)
-
-where :math:`F^{-1}_{n, \alpha}` is the quantile function of the cumulative distribution function of the 
-binomial distribution with parameters :math:`n` and :math:`\alpha`.
-The problem has a solution only if:
-
-.. math::
-
-    1 - \alpha^n \geq \beta.
+See  :ref:`quantile_confidence_estimation`
+to get the conditions of the existence of a solution and the solution for each case.
 
 Parameters
 ----------
@@ -103,7 +82,10 @@ size : int
     Sample size
 tail : bool, optional
     True indicates the interval is bounded by a lower value.
-    False indicates the interval is bounded by an upper value. Default value is False.
+
+    False indicates the interval is bounded by an upper value.
+
+    Default value is False.
 
 Returns
 -------
@@ -127,25 +109,15 @@ Examples
 %feature("docstring") OT::QuantileConfidence::computeBilateralRank
 "Evaluate the bilateral rank of a quantile.
 
-The bilateral ranks :math:`k_1, k_2` are the integers minimizing the probability:
+The bilateral ranks :math:`k_1, k_2` are the integers solution of:
 
 .. math::
 
-    \argmin_{0 \leq k_1 \leq k_2 \leq n - 1 \, | \, \Prob{k_1 < X \leq k_2} \geq \beta} \Prob{k_1 < X \leq k_2}
+    \argmin_{0 \leq k_1 < k_2 \leq n-1 \, | \, \Prob{X_{(k_1)} \leq x_\alpha \leq X_{(k_2)}} \geq \beta} \Prob{X_{(k_1)} \leq x_\alpha \leq X_{(k_2)}}
 
-where :math:`X \sim \cB(n, \alpha)` is the binomial distribution with parameters :math:`n` and :math:`\alpha`.
-
-so that:
-
-.. math::
-
-    \Prob{X_{(k_1)} \leq x_{\alpha} \leq X_{(k_2)}} \geq \beta.
-
-These ranks exist only if:
-
-.. math::
-
-    1 - \alpha^n - (1-\alpha)^n \ge \beta.
+See  :ref:`quantile_confidence_estimation`
+to get the conditions of the existence of a solution and the solution.
+ 
 
 Parameters
 ----------
@@ -155,7 +127,7 @@ size : int
 Returns
 -------
 ranks : :class:`~openturns.Indices` of size 2
-    Pair of lower and upper ranks :math:`(k_1, k_2)` such that :math:`0 \leq k_1 \leq k_2 \leq n - 1`.
+    Pair of lower and upper ranks :math:`(k_1, k_2)`.
 
 Examples
 --------
@@ -180,7 +152,7 @@ The lower tail confidence interval is given by the order statistics:
 
     [X_{(k_{low})}, +\infty[
 
-so that:
+where :math:`k_{low}` is the largest integer so that:
 
 .. math::
 
@@ -192,13 +164,13 @@ and the upper tail confidence interval is given by the order statistics:
 
     ]-\infty, X_{(k_{up})}]
 
-so that:
+where :math:`k_{up}` is the smallest integer so that:
 
 .. math::
 
-    \Prob{x_{\alpha} \leq X_{(k_{up})}} \geq \beta.
+    \Prob{x_{\alpha} \leq X_{(k_{up})}} \geq \beta
 
-where the lower or upper ranks :math:`0 \leq k_{low} \leq n - 1, 0 \leq k_{up} \leq n - 1` are given by :meth:`computeUnilateralRank`.
+The lower or upper ranks :math:`0 \leq k_{low} \leq n - 1, 0 \leq k_{up} \leq n - 1` are given by :meth:`computeUnilateralRank`.
 
 Parameters
 ----------
@@ -206,7 +178,10 @@ sample : 2-d sequence of float
     Quantile level
 tail : bool, optional
     True indicates the interval is bounded by a lower value.
-    False indicates the interval is bounded by an upper value. Default value is False.
+
+    False indicates the interval is bounded by an upper value.
+
+    Default value is False.
 
 Returns
 -------
@@ -241,7 +216,7 @@ so that:
 
     \Prob{X_{(k_1)} \leq x_{\alpha} \leq X_{(k_2)}} \geq \beta
 
-where the ranks :math:`0 \leq k_1 \leq k_2 \leq n - 1` are given by :meth:`computeBilateralRank`.
+The ranks :math:`0 \leq k_1 \leq k_2 \leq n - 1` are given by :meth:`computeBilateralRank`.
 
 Parameters
 ----------
@@ -273,55 +248,27 @@ For the lower bound the minimal unilateral sample size is the smallest integer :
 
 .. math::
 
-    \Prob{X_{(r)} \leq x_{\alpha}} \geq \beta.
+    \Prob{X_{(k)} \leq x_{\alpha}} \geq \beta.
 
 For the upper bound the minimal unilateral sample size is the smallest integer :math:`n` such that:
 
 .. math::
 
-    \Prob{x_{\alpha} \leq X_{(n-r-1)}} \geq \beta.
+    \Prob{x_{\alpha} \leq X_{(n-k-1)}} \geq \beta.
 
-In the general case the minimum size of the sample is the smallest :math:`n` such that:
-
-.. math::
-
-    F_{n,\alpha}(n-r-1) \geq \beta
-
-where :math:`F_{n,\alpha}` is the cumulative distribution function of the Binomial distribution with parameters :math:`n` and :math:`\alpha`.
-
-When the rank :math:`r` is zero the solution is analytical.
-
-- For the lower bound the minimum sample size is the integer that satisfies:
-
-  .. math::
-
-      1 - (1 - \alpha)^n \geq \beta
-
-  which is given by:
-
-  .. math::
-
-      n_{low} = \left\lceil \frac{\log(1-\beta)}{\log(1-\alpha)} \right\rceil.
-
-- And for the upper bound the minimum sample size is the integer that satisfies:
-
-  .. math::
-
-      1 - \alpha^n \geq \beta
-
-  which is given by:
-
-  .. math::
-
-      n_{up} = \left\lceil \frac{\log(1-\beta)}{\log(\alpha)} \right\rceil.
+See  :ref:`quantile_confidence_estimation`
+to get the conditions of the existence of a solution and the solution.
 
 Parameters
 ----------
-rank : int, optional
+k : int, optional
     Rank of the quantile. Default value is 0.
 tail : bool, optional
     True indicates the interval is bounded by a lower value.
-    False indicates the interval is bounded by an upper value. Default value is False.
+
+    False indicates the interval is bounded by an upper value.
+
+    Default value is False.
 
 Returns
 -------
@@ -349,10 +296,10 @@ The minimal bilateral sample size is the smallest integer :math:`n` such that:
 
 .. math::
 
-    \Prob{X_{(1)} \leq x_{\alpha} \leq X_{(n)}} \geq \beta.
+    \Prob{X_{(0)} \leq x_{\alpha} \leq X_{(n-1)}} \geq \beta.
 
 In other words, this is the minimum sample size such that the interval
-:math:`\left[X_{(1)}, X_{(n)} \right]` is a confidence interval of the quantile :math:`x_\alpha`
+:math:`\left[X_{(0)}, X_{(n-1)} \right]` is a confidence interval of the quantile :math:`x_\alpha`
 with confidence :math:`\beta`.
 The solution of this problem is the minimum value of :math:`n` such that:
 
