--- a/python/src/LeastSquaresMetaModelSelection_doc.i.in
+++ b/python/src/LeastSquaresMetaModelSelection_doc.i.in
@@ -13,14 +13,14 @@ The LeastSquaresMetaModelSelection is built from a :class:`~openturns.LeastSquar
 The stopping criteria for the model selection is defined through the following entries of the
 :class:`~openturns.ResourceMap`: 
 
-- *LeastSquaresMetaModelSelection-ErrorThreshold*: if the error computed by cross validation is lesser than this threshold,
+- *LeastSquaresMetaModelSelection-ErrorThreshold* : if the error computed by cross validation is lesser than this threshold,
    then the exploration is stopped. The default value is 0: this criteria is not activated by default.
-- *LeastSquaresMetaModelSelection-MaximumError*: if the error computed by cross validation is greater than this threshold,
+- *LeastSquaresMetaModelSelection-MaximumError* : if the error computed by cross validation is greater than this threshold,
    then the exploration is stopped (the error first decreases then increases when the basis complexity increases). The best
    approximation obtained so far is returned. The default value is 0.5.
-- *LeastSquaresMetaModelSelection-alpha*: through the exploration, the minimum error :math:`e_{min}` is stored. If the
-   current error is greater than :math:`\alpha \times e_{min}`, then the exploration is stopped. The best approximation
-   obtained so far
+- *LeastSquaresMetaModelSelection-MaximumErrorFactor* : through the exploration, the minimum error :math:`e_{min}` is stored. If the
+   current error is greater than :math:`\alpha \times e_{min}`, (where :math:`\alpha` is the *MaximumErrorFactor*)
+   then the exploration is stopped. The best approximation obtained so far
    is returned. The default value is 2. This value allows one to filter little fluctuations in the error computation.
 
 "
