LeastSquaresMetaModelSelection: Add SmallBasisSize
Closes #2495

--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -145,6 +145,7 @@ ot_pyinstallcheck_test (ConstantFunction_std IGNOREOUT)
 ot_pyinstallcheck_test (Basis_std IGNOREOUT)
 ot_pyinstallcheck_test (BasisSequence_std)
 ot_pyinstallcheck_test (LARS_std)
+ot_pyinstallcheck_test (LARS_noisy_error IGNOREOUT)
 ot_pyinstallcheck_test (FieldFunction_std)
 ot_pyinstallcheck_test (FieldFunction_python)
 ot_pyinstallcheck_test (ValueFunction_std)
