Ci: Update circleci.yml

--- a/.github/workflows/circleci.yml
+++ b/.github/workflows/circleci.yml
@@ -5,6 +5,7 @@ permissions: read-all
 jobs:
    circleci_artifacts_redirector_job:
      runs-on: ubuntu-latest
+     if: "${{ github.event.context == 'ci/circleci: build_linux' }}"
      permissions:
        statuses: write
      name: Run CircleCI artifacts redirector
