--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -940,7 +940,7 @@
   <GaussianProcessFitter-DefaultOptimizationScaleFactor         value_float="2.0"     />
   <GaussianProcessFitter-DefaultOptimizationUpperBound          value_float="1.0e2"   />
   <GaussianProcessFitter-DefaultOptimizationNuggetLowerBound    value_float="1.0e-12"   />
-  <GaussianProcessFitter-DefaultOptimizationAlgorithm           value_str="Cobyla"     />
+  <GaussianProcessFitter-DefaultOptimizationAlgorithm           value_str="LN_COBYLA"     />
   <GaussianProcessFitter-LinearAlgebra                          value_str="LAPACK"  />
 
   <!-- OT::KrigingAlgorithm parameters -->
