--- a/python/src/DesignProxy_doc.i.in
+++ b/python/src/DesignProxy_doc.i.in
@@ -2,6 +2,8 @@
 "Design matrix cache.
 
 Available constructors:
+    DesignProxy(*x, func_coll*)
+    
     DesignProxy(*x, basis*)
 
     DesignProxy(*matrix*)
@@ -10,16 +12,31 @@ Parameters
 ----------
 x : :class:`~openturns.Sample`
     Input sample
-psi : sequence of :class:`~openturns.Function`
+func_coll : sequence of :class:`~openturns.Function`
+    Basis
+basis : sequence of :class:`~openturns.Basis`
     Basis
 matrix : 2-d sequence of float
 The design matrix
 
 Notes
 -----
-Helps to cache evaluations of the design matrix. Can be useful for an iterative
+Let :math:`(\phi_k)_{1 \leq k \leq m}` be a functional basis of size :math:`m`, where each function
+:math:`\phi_k: \Rset^\inputDim \rightarrow \Rset` with :math:`\inputDim \geq 1`.
+Let :math:`(\vect{x}^j)_{1 \leq j \leq \sampleSize}` be some
+input vectors in :math:`Rset^\inputDim`.
+
+The class builds the matrix :math:`\mat{D} = (d_{jk})_{jk} \in \Rset^{\sampleSize\times m}` defined by:
+
+.. math::
+   d_{jk} = \phi_k(\vect{x}^j) \quad 1 \leq k \leq m, \quad 1 \leq j \leq \sampleSize
+
+The matrix columns are effectively built when the *computeDesign* method is activated. The values are stored in a cache.
+Can be useful for an iterative
 least squares problem resolution or in interaction with :class:`~openturns.LeastSquaresMethod`
 to select the algorithm used for the resolution of linear least-squares problems.
+
+It is posisble to directly specify the values :math:`(d_{jk})_{jk}` in the last constructor.
 
 Examples
 --------
@@ -28,11 +45,12 @@ Examples
 >>> sampleSize = 5
 >>> X = ot.Sample(sampleSize, 1)
 >>> X = ot.Sample.BuildFromPoint(range(1, 1 + sampleSize))
->>> phis = []
+>>> func_coll = []
 >>> for j in range(basisSize):
-...     phis.append(ot.SymbolicFunction(['x'], ['x^' + str(j + 1)]))
->>> basis = ot.Basis(phis)
->>> proxy = ot.DesignProxy(X, phis)
+...     func_coll.append(ot.SymbolicFunction(['x'], ['x^' + str(j + 1)]))
+>>> basis = ot.Basis(func_coll)
+>>> proxy = ot.DesignProxy(X, func_coll)
+>>> proxy2 = ot.DesignProxy(X, basis)
 "
 
 // ---------------------------------------------------------------------
