--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -30,17 +30,16 @@ endif ()
 # Exclude Ipopt sources
 if (Ipopt_FOUND)
   set_source_files_properties (Base/Optim/Ipopt.cxx Base/Optim/IpoptProblem.cxx PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
+  if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+    set_source_files_properties (Base/Optim/Ipopt.cxx Base/Optim/IpoptProblem.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=suggest-override")
+  endif ()
 endif ()
 
 # Exclude Bonmin sources
 if (Bonmin_FOUND)
   set_source_files_properties (Base/Optim/Bonmin.cxx Base/Optim/BonminProblem.cxx PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
   if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
-    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7)
-      set_source_files_properties (Base/Optim/Bonmin.cxx Base/Optim/BonminProblem.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=unused-parameter")
-    else ()
-      set_source_files_properties (Base/Optim/Bonmin.cxx Base/Optim/BonminProblem.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=unused-parameter -Wno-error=implicit-fallthrough -Wno-error=overloaded-virtual")
-    endif ()
+    set_source_files_properties (Base/Optim/Bonmin.cxx Base/Optim/BonminProblem.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=unused-parameter -Wno-error=overloaded-virtual -Wno-error=implicit-fallthrough")
   endif ()
   if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     set_source_files_properties (Base/Optim/Bonmin.cxx Base/Optim/BonminProblem.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=unused-parameter -Wno-error=overloaded-virtual")
