--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -304,9 +304,7 @@ if (highs_FOUND)
 endif ()
 ot_pyinstallcheck_test (LinearProblem_std IGNOREOUT)
 ot_pyinstallcheck_test (MultiStart_std IGNOREOUT)
-if (NLopt_FOUND)
-  ot_pyinstallcheck_test (NLopt_std IGNOREOUT)
-endif ()
+ot_pyinstallcheck_test (NLopt_std IGNOREOUT)
 ot_pyinstallcheck_test (OptimizationAlgorithm_std IGNOREOUT)
 if (Pagmo_FOUND)
   ot_pyinstallcheck_test (Pagmo_std IGNOREOUT)
@@ -779,11 +777,11 @@ if (HMAT_FOUND)
   ot_pyinstallcheck_test (GaussianProcessFitter_std_hmat IGNOREOUT)
   ot_pyinstallcheck_test (GaussianProcessRegression_std_hmat IGNOREOUT)
 endif ()
-if (NLopt_FOUND)
-  ot_pyinstallcheck_test (GeneralLinearModelAlgorithm_nlopt IGNOREOUT)
-  ot_pyinstallcheck_test (GaussianProcessFitter_nlopt IGNOREOUT)
-  ot_pyinstallcheck_test (GaussianProcessRegression_nlopt IGNOREOUT)
-endif ()
+# NLopt
+ot_pyinstallcheck_test (GeneralLinearModelAlgorithm_nlopt IGNOREOUT)
+ot_pyinstallcheck_test (GaussianProcessFitter_nlopt IGNOREOUT)
+ot_pyinstallcheck_test (GaussianProcessRegression_nlopt IGNOREOUT)
+
 ot_pyinstallcheck_test (LinearModelAlgorithm_std)
 ot_pyinstallcheck_test (LinearModelAnalysis_std)
 ot_pyinstallcheck_test (LinearModelStepwiseAlgorithm_std)
@@ -822,9 +820,7 @@ ot_pyinstallcheck_test (LineSampling_std IGNOREOUT)
 ot_pyinstallcheck_test (SobolSimulationAlgorithm_std)
 ot_pyinstallcheck_test (NAIS_std IGNOREOUT)
 ot_pyinstallcheck_test (StandardSpaceCrossEntropyImportanceSampling_std IGNOREOUT)
-if (NLopt_FOUND)
-  ot_pyinstallcheck_test (PhysicalSpaceCrossEntropyImportanceSampling_std IGNOREOUT)
-endif ()
+ot_pyinstallcheck_test (PhysicalSpaceCrossEntropyImportanceSampling_std IGNOREOUT)
 
 
 ## StatTests
